--- a/src/img.css
+++ b/src/img.css
@@ -25,13 +25,24 @@
     padding-left: 40%;
     border-radius: 12%;
     padding: 20px;
+    justify-content: center;
+  }
+  .box0 {
+    display: flex;
+    flex-wrap: wrap;
+    gap:1%;
+    margin-top: 5vh;
+    padding-left: 0%;
+    border-radius: 12%;
+    padding: 20px;
+    justify-content: center;
   }
   .img1 {
     width: 35%;
     height: 35%;
     object-fit: cover; 
     padding: 20px;
-    padding-left: 10%;
+    padding-left: 0%;
     gap:1%;
   }
   .box2{
@@ -40,11 +51,11 @@
     gap: 3vh;
     border-radius: 12px;
     padding-left: 1%;
- 
+ justify-content: center;
   }
   .img2 {
     width: 100%;
-    height: 50%;
+    height: 350px;
     margin-left: 1%;
     object-fit: cover;
     border-radius:"12px";
@@ -93,6 +104,7 @@
     width: 60%;
     height: 35%;
     margin-left: 1%;
+    padding: 10px;
     object-fit: cover;
     border-radius:"12px";
     
@@ -101,8 +113,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0vh;
-
-    padding-left: 2%;
   }
   .img5 {
     width: 70%;
@@ -120,10 +130,32 @@
     margin-left:15% ;
     
   }
-  .recipe-list-container {
+  .recipe-list-container1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 24px;
     margin: 24px;
   }
+  .recipe-list-container {
+    display: flex;
+    gap:0%;
+    flex-wrap: wrap;
+ 
+  }
+  
+  .list-container
+{
+    background-color: white;
+    width: 70%;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: rgb(0 0 0 / 24%) 1px 2px 13px;
+    margin:20px
+  }
+  .recipe-picture{
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+  }
+  
